--- a/signup.html
+++ b/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login</title>
+  <title>Sign Up</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -48,17 +48,17 @@
   </style>
 </head>
 <body>
-  <h1>Login Page</h1>
+  <h1>Sign Up Page</h1>
 
   <div class="form-container">
-    <h2>Login</h2>
-    <form action="test.html" method="post">
+    <h2>Sign Up</h2>
+    <form action="signup.php" method="post">
       <input type="text" name="username" placeholder="Username" required><br>
       <input type="password" name="password" placeholder="Password" required><br>
-      <input type="submit" value="Login">
+      <input type="submit" value="Sign Up">
     </form>
     <div class="link">
-      New user? <a href="signup.html">Click here</a>.
+      Existing user? <a href="index.html">Click here</a>.
     </div>
   </div>
 </body>
