--- a/signup.html
+++ b/signup.html
@@ -58,7 +58,7 @@
       <input type="submit" value="Sign Up">
     </form>
     <div class="link">
-      Existing user? <a href="index.html">Click here</a>.
+      Existing user? <a href="khetguru.netlify.app">Click here</a>.
     </div>
   </div>
 </body>
