--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <div class="form-container">
     <h2>Login</h2>
-    <form action="test.html" method="post">
+    <form action="khetguru.netlify.app/test.html" method="post">
       <input type="text" name="username" placeholder="Username" required><br>
       <input type="password" name="password" placeholder="Password" required><br>
       <input type="submit" value="Login">
