--- a/index.html
+++ b/index.html
@@ -1,65 +1,140 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login</title>
+  <title>Khet Guru</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
+    header {
+      background-color: #333;  
+      color: #fff;
+      padding: 10px;
+     }
+    
+    nav ul li {
+      display: inline-block;  
+      margin-right: 10px;
     }
 
-    h1 {
-      margin-top: 50px;
+    nav ul li a {
+      color: #cc5500;
     }
 
-    .form-container {
-      display: inline-block;
-      margin-top: 50px;
+    .container {
+      width: 300px;
+      margin: 0 auto;
       padding: 20px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
     }
 
-    input[type="text"],
-    input[type="password"] {
-      width: 250px;
-      height: 30px;
-      margin-top: 10px;
+    .form-group {
+      margin-bottom: 15px;
+    }
+
+    .form-group label {
+      display: block;
+      margin-bottom: 5px;
+    }
+
+    .form-group input,
+    .form-group select {
+      width: 100%;
       padding: 5px;
       font-size: 16px;
     }
 
-    input[type="submit"] {
-      width: 100px;
-      height: 40px;
-      margin-top: 20px;
+    .btn-submit {
       background-color: #4CAF50;
       color: white;
+      padding: 10px 20px;
       border: none;
-      border-radius: 5px;
       cursor: pointer;
-      font-size: 16px;
     }
 
-    .link {
-      margin-top: 10px;
-      font-size: 14px;
+    .output {
+      margin-top: 20px;
+      border: 1px solid #ccc;
+      padding: 10px;
+      font-size: 16px;
     }
   </style>
 </head>
 <body>
-  <h1>Login Page</h1>
+  <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <!-- Add a menu:
+   Log in / Sign up - when the user is not logged in
+   Username / Log out - when the user is logged in
+  -->
+  <div data-netlify-identity-menu></div>
 
-  <div class="form-container">
-    <h2>Login</h2>
-    <form action="khetguru.netlify.app/test.html" method="post">
-      <input type="text" name="username" placeholder="Username" required><br>
-      <input type="password" name="password" placeholder="Password" required><br>
-      <input type="submit" value="Login">
+  <!-- Add a simpler button:
+    Simple button that will open the modal.
+  -->
+  <div data-netlify-identity-button>Login with Netlify Identity</div>
+  <header>
+    <nav>
+      <ul>
+      <li><a href="something.html">Home</a></li>
+      <li><a href="#">Accounts</a></li>
+      <li><a href="#">Transfers</a></li>
+      <li><a href="#">Payments</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div class="container">
+    <h2>Value Calculator</h2>
+    <form id="value-form">
+      <div class="form-group">
+        <label for="value1">Value 1:</label>
+        <input type="number" id="value1" required>
+      </div>
+      <div class="form-group">
+        <label for="value2">Value 2:</label>
+        <input type="number" id="value2" required>
+      </div>
+      <div class="form-group">
+        <label for="value3">Value 3:</label>
+        <input type="number" id="value3" required>
+      </div>
+      <div class="form-group">
+        <label for="operation">Operation:</label>
+        <select id="operation" required>
+          <option value="">-- Select --</option>
+          <option value="wheat">Addition</option>
+          <option value="rice">Subtraction</option>
+          <option value="sugarcane">Multiplication</option>
+          <option value="maize">Division</option>
+        </select>
+      </div>
+      <button type="submit" class="btn-submit">Calculate</button>
     </form>
-    <div class="link">
-      New user? <a href="signup.html">Click here</a>.
-    </div>
+    <div id="output" class="output"></div>
   </div>
+
+  <script>
+    const form = document.getElementById('value-form');
+    const output = document.getElementById('output');
+
+    form.addEventListener('submit', function(event) {
+      event.preventDefault();
+      const value1 = parseFloat(document.getElementById('value1').value);
+      const value2 = parseFloat(document.getElementById('value2').value);
+      const value3 = parseFloat(document.getElementById('value3').value);
+      const operation = document.getElementById('operation').value;
+
+      let result;
+
+      if (operation === 'wheat') {
+        result = 'Formula not yet been implemented';
+      } else if (operation === 'rice') {
+        result = 'Formula not yet been implemented';
+      } else if (operation === 'sugarcane') {
+        result = 'Formula not yet been implemented';
+      } else if (operation === 'maize') {
+        result = 'Formula not yet been implemented';
+      } else {
+        result = 'Invalid operation';
+      }
+
+      output.textContent = 'Result: ' + result;
+    });
+  </script>
 </body>
 </html>
