Better sign up buttons

--- a/test.html
+++ b/test.html
@@ -57,7 +57,7 @@
   </style>
 </head>
 <body>
-  <header>
+<!--  <header>
     <nav>
       <ul>
       <li><a href="something.html">Home</a></li>
@@ -65,8 +65,8 @@
       <li><a href="#">Transfers</a></li>
       <li><a href="#">Payments</a></li>
       </ul>
-    </nav>
-  </header>
+    </nav> 
+  </header>-->
   <div class="container">
     <h2>Value Calculator</h2>
     <form id="value-form">
