--- a/index.html
+++ b/index.html
@@ -3,6 +3,47 @@
 <head>
   <title>Khet Guru</title>
   <style>
+
+  [data-netlify-identity-menu] ul {
+							display: flex;
+						}
+
+						[data-netlify-identity-menu] li:first-child {
+							margin-right: 16px;
+						}
+
+						[data-netlify-identity-menu] li {
+							list-style-type: none;
+							display: inline-block;
+						}
+
+						[data-netlify-identity-menu] a {
+							display: block;
+							position: relative;
+							width: 192px;
+							height: 24px;
+							padding: 8px;
+							outline: 0;
+							cursor: pointer;
+							border: 2px solid #007a70;
+							border-radius: 4px;
+							background-color: #00ad9F;
+							color: white;
+							transition: background-color 0.2s ease;
+							font-size: 16px;
+							font-weight: 500;
+							line-height: 24px;
+							text-align: center;
+							text-decoration: none;
+							white-space: nowrap;
+						}
+
+						[data-netlify-identity-menu] a:hover,
+						[data-netlify-identity-menu] a:focus {
+							background-color: #007a70;
+							text-decoration: none;
+						}
+
     header {
       background-color: #333;  
       color: #fff;
@@ -58,18 +99,9 @@
 </head>
 <body>
   <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-  <!-- Add a menu:
-   Log in / Sign up - when the user is not logged in
-   Username / Log out - when the user is logged in
-  -->
-  <div data-netlify-identity-menu></div>
-
-  <!-- Add a simpler button:
-    Simple button that will open the modal.
-  -->
-  <div data-netlify-identity-button>Login with Netlify Identity</div>
+  <div style="display: flex; justify-content: center;" data-netlify-identity-menu></div>
   <header>
-    <nav>
+<!--<nav>
       <ul>
       <li><a href="something.html">Home</a></li>
       <li><a href="#">Accounts</a></li>
@@ -77,10 +109,10 @@
       <li><a href="#">Payments</a></li>
       </ul>
     </nav>
-  </header>
+  </header> -->
   <div class="container">
     <h2>Value Calculator</h2>
-    <form id="value-form">
+    <form id="value-form" netlify>
       <div class="form-group">
         <label for="value1">Value 1:</label>
         <input type="number" id="value1" required>
