Check commit for form submission

--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
       let result;
 
       if (operation === 'wheat') {
-        result = 'Formula not yet been implemented';
+        result = value1 + value2 + value3;
       } else if (operation === 'rice') {
-        result = 'Formula not yet been implemented';
+        result = value1 - value2 - value3;
       } else if (operation === 'sugarcane') {
-        result = 'Formula not yet been implemented';
+        result = value1 * value2 * value3;
       } else if (operation === 'maize') {
-        result = 'Formula not yet been implemented';
+        result = value1 / value2 / value3;
       } else {
         result = 'Invalid operation';
       }
