--- a/index.html
+++ b/index.html
@@ -113,29 +113,21 @@
   <div class="container">
     <h2>Value Calculator</h2>
     <form id="value-form" netlify>
-      <div class="form-group">
-        <label for="value1">Value 1:</label>
-        <input type="number" id="value1" required>
-      </div>
-      <div class="form-group">
-        <label for="value2">Value 2:</label>
-        <input type="number" id="value2" required>
-      </div>
-      <div class="form-group">
-        <label for="value3">Value 3:</label>
-        <input type="number" id="value3" required>
-      </div>
-      <div class="form-group">
-        <label for="operation">Operation:</label>
-        <select id="operation" required>
+        <label for="value1">Value 1:</label><br>
+        <input type="number" id="value1" required><br>
+        <label for="value2">Value 2:</label><br>
+        <input type="number" id="value2" required><br>
+        <label for="value3">Value 3:</label><br>
+        <input type="number" id="value3" required><br>
+        <label for="operation">Operation:</label><br>
+        <select id="operation" required><br>
           <option value="">-- Select --</option>
           <option value="wheat">Addition</option>
           <option value="rice">Subtraction</option>
           <option value="sugarcane">Multiplication</option>
           <option value="maize">Division</option>
-        </select>
-      </div>
-      <button type="submit" class="btn-submit">Calculate</button>
+        </select><br>
+      <button style="display: flex; justify-content: center;" type="submit" class="btn-submit">Calculate</button>
     </form>
     <div id="output" class="output"></div>
   </div>
