Check for form submissions 3

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   </header> -->
   <div class="container">
     <h2>Value Calculator</h2>
-    <form id="value-form" netlify>
+    <form name="npkValues" id="value-form" netlify>
       <div class="form-group">
         <label for="value1">Value 1:</label>
         <input type="number" id="value1" required>
