Check for form submission (I lost count 2)

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <option name="maize" value="maize">Division</option>
         </select>
       </div>
-      <button type="submit" class="btn-submit">Calculate</button>
+      <button name="submitButton" type="submit" class="btn-submit">Calculate</button>
       </form>
     <div id="output" class="output"></div>
   </div>
