--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   <div class="container">
     <h2>Value Calculator</h2>
     <form name="npkValues" netlify>
-      <input type="hidden" name="token" value="<%= jwt %>">
+      <input type="hidden" name="token" value="{{ jwt }}">
       <div class="form-group">
         <label for="value1">Value 1:</label>
         <input name="value1" type="number" required>
