Different webpages for calculator and sign in

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 <body>
   <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   <div style="display: flex; justify-content: center;" data-netlify-identity-menu></div>
-  <header>
-<!--<nav>
+<!--  <header>
+    <nav>
       <ul>
       <li><a href="something.html">Home</a></li>
       <li><a href="#">Accounts</a></li>
