--- a/something.html
+++ b/something.html
@@ -1,69 +1,154 @@
 <!DOCTYPE html>
 <html>
-<style>
-body {font-family: Arial; background-color: #7fffd4;}
-header {background-color: #333;  color: #fff;  padding: 10px;}
-nav ul li {display: inline-block;  margin-right: 10px;}
-nav ul li a {color: #cc5500;}
-section#content {padding: 20px;}
-div#payment-module {margin-bottom: 20px;}
-form label {display: block;  margin-bottom: 5}
-</style>
 <head>
-<title>Top Notch Bank</title>
-<link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Soil Nutrient Calculator</title>
+    <style> 
+    .container {
+      width: 300px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    .form-group {
+      margin-bottom: 15px;
+    }
+
+    .form-group label {
+      display: block;
+      margin-bottom: 5px;
+    }
+
+    .form-group input,
+    .form-group select {
+      width: 100%;
+      padding: 5px;
+      font-size: 16px;
+    }
+
+    .btn-submit {
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      cursor: pointer;
+    }
+
+    .output {
+      margin-top: 20px;
+      border: 1px solid #ccc;
+      padding: 10px;
+      font-size: 16px;
+    }
+    </style>
+    <script>
+        function calculate() {
+            // Get user input values
+            var nitrogen = parseFloat(document.getElementById("nitrogen").value);
+            var phosphorous = parseFloat(document.getElementById("phosphorous").value);
+            var potassium = parseFloat(document.getElementById("potassium").value);
+
+            // Define ideal nutrient levels
+            var idealNitrogen = 100; // Example value, you can adjust it
+            var idealPhosphorous = 50; // Example value, you can adjust it
+            var idealPotassium = 80; // Example value, you can adjust it
+
+            // Calculate nutrient differences
+            var nitrogenDifference = idealNitrogen - nitrogen;
+            var phosphorousDifference = idealPhosphorous - phosphorous;
+            var potassiumDifference = idealPotassium - potassium;
+
+            // Calculate fertilizer requirements
+            var nitrogenFertilizer = nitrogenDifference > 0 ? nitrogenDifference : 0;
+            var phosphorousFertilizer = phosphorousDifference > 0 ? phosphorousDifference : 0;
+            var potassiumFertilizer = potassiumDifference > 0 ? potassiumDifference : 0;
+
+            // Calculate approximate cost
+            var fertilizerCostPerUnit = 10; // Example value, you can adjust it
+            var totalCost = (nitrogenFertilizer + phosphorousFertilizer + potassiumFertilizer) * fertilizerCostPerUnit;
+
+            // Update output elements
+            document.getElementById("idealNitrogen").textContent = idealNitrogen;
+            document.getElementById("idealPhosphorous").textContent = idealPhosphorous;
+            document.getElementById("idealPotassium").textContent = idealPotassium;
+
+            document.getElementById("nitrogenDifference").textContent = nitrogenDifference;
+            document.getElementById("phosphorousDifference").textContent = phosphorousDifference;
+            document.getElementById("potassiumDifference").textContent = potassiumDifference;
+
+            document.getElementById("nitrogenFertilizer").textContent = nitrogenFertilizer;
+            document.getElementById("phosphorousFertilizer").textContent = phosphorousFertilizer;
+            document.getElementById("potassiumFertilizer").textContent = potassiumFertilizer;
+
+            document.getElementById("totalCost").textContent = totalCost;
+        }
+    </script>
 </head>
 <body>
-<header>
-<h1>Top Notch Bank</h1>
-<nav>
-<ul>
-<li><a href="#">Home</a></li>
-<li><a href="#">Accounts</a></li>
-<li><a href="#">Transfers</a></li>
-<li><a href="#">Payments</a></li>
-</ul>
-</nav>
-</header>
-  <section id="content">
-    <div id="account-module">
-<h2>Accounts</h2><ul id="account-list">
-<li>Savings Account</li>
-<li>Checking Account</li>
-<li>Credit Card</li>
-</ul>
-</div>
-    <div id="transfer-module">
-      <h2>Transfers</h2>
-      <form id="transfer-form">
-        <label for="from-account">From:</label>
-        <select id="from-account">
-            <option value="savings">Savings Account</option>
-            <option value="checking">Checking Account</option>
-        </select>
-        <label for="to-account">To:</label>
-        <select id="to-account">
-            <option value="savings">Savings Account</option>
-            <option value="checking">Checking Account</option
-                ></select>       
-        <label for="amount">Amount:</label>
-        <input type="text" id="amount">        
-        <button type="submit">Transfer</button>
+  <div class="container">
+    <form name="npkValue">
+      <h1>Soil Nutrient Calculator</h1>
+      <p>Enter the nutrient contents per hectare:</p>
+      <div class="form-group">
+        <label for="nitrogen">Nitrogen:</label>
+        <input type="number" name="nitrogen" id="nitrogen" step="0.01">
+        <br>
+      </div>
+      <div class="form-group">
+        <label for="phosphorous">Phosphorous:</label>
+        <input type="number" name="phosphorous" id="phosphorous" step="0.01">
+      <br>
+     </div>
+     <div class="form-group">
+      <label for="potassium">Potassium:</label>
+      <input type="number" name="potassium" id="potassium" step="0.01">
+      <br>
+     </div>
+<!--     <div class="form-group">
+      <label for="operation">Operation:</label>
+      <select name="operation" required>
+        <option name="select" value="">-- Select --</option>
+        <option name="wheat" value="wheat">Addition</option>
+        <option name="rice" value="rice">Subtraction</option>
+        <option name="sugarcane" value="sugarcane">Multiplication</option>
+        <option name="maize" value="maize">Division</option>
+      </select>
+    </div>-->
+      <br>
+      <button name="submitButton" class="btn-submit" onclick="calculate()">Calculate</button>
+      <br>
     </form>
-</div>   
-    <div id="payment-module">
-<h2>Payments</h2>
-      <form id="payment-form">
-        <label for="payee">Payee:</label>
-        <input type="text" id="payee">
-        <label for="amount">Amount:</label>
-        <input type="text" id="amount">
-        <button type="submit">Pay</button>
-    </form>
-    </div>
-</section> 
-  <footer><p>&copy; 2023 Top Notch Bank. All rights reserved.</p></footer>
-  <script src="script.js">
-</script>
+  </div>
+<!--    <h1>Soil Nutrient Calculator</h1>
+    <p>Enter the nutrient contents per hectare:</p>
+    <label for="nitrogen">Nitrogen:</label>
+    <input type="number" id="nitrogen" step="0.01">
+    <br>
+    <label for="phosphorous">Phosphorous:</label>
+    <input type="number" id="phosphorous" step="0.01">
+    <br>
+    <label for="potassium">Potassium:</label>
+    <input type="number" id="potassium" step="0.01">
+    <br>
+    <br>
+    <button onclick="calculate()">Calculate</button>
+    <br>
+    <br> -->
+    <h2>Results:</h2>
+    <p>Ideal Nutrient Levels (per hectare):</p>
+    <p>Nitrogen: <span id="idealNitrogen"></span></p>
+    <p>Phosphorous: <span id="idealPhosphorous"></span></p>
+    <p>Potassium: <span id="idealPotassium"></span></p>
+    <br>
+    <p>Nutrient Differences (per hectare):</p>
+    <p>Nitrogen Difference: <span id="nitrogenDifference"></span></p>
+    <p>Phosphorous Difference: <span id="phosphorousDifference"></span></p>
+    <p>Potassium Difference: <span id="potassiumDifference"></span></p>
+    <br>
+    <p>Fertilizer Requirements (per hectare):</p>
+    <p>Nitrogen Fertilizer: <span id="nitrogenFertilizer"></span></p>
+    <p>Phosphorous Fertilizer: <span id="phosphorousFertilizer"></span></p>
+    <p>Potassium Fertilizer: <span id="potassiumFertilizer"></span></p>
+    <br>
+    <p>Approximate Cost: $<span id="totalCost"></span></p>
 </body>
 </html>
