bug fix for test.html

--- a/test.html
+++ b/test.html
@@ -152,7 +152,8 @@ input[type="submit"] {
 
 
     </style>
-    <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js">
+    <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script>
         function calculate() {
             // Get user input values
             var nitrogen = parseFloat(document.getElementById("nitrogen").value);
