check commit for login 2

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 if (netlifyIdentity.currentUser()) {
   // User is logged in
   // Redirect to another webpage
-  window.location.href = "khetguru.netlify.app/test.html";
+  window.location.href = "test.html";
 } else {
   // User is not logged in
   // Perform any other desired actions
