--- a/index.html
+++ b/index.html
@@ -48,16 +48,21 @@
 </head>
 <body>
   <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js">
-    // Check if the user is logged in using Netlify Identity Widget
-if (netlifyIdentity.currentUser()) {
-  // User is logged in
-  // Redirect to another webpage
-  window.location.href = "test.html";
-} else {
-  // User is not logged in
-  // Perform any other desired actions
-  console.log("User is not logged in");
-}
+  document.addEventListener("DOMContentLoaded", function() {
+  netlifyIdentity.on("init", function(user) {
+    if (user) {
+      // User is logged in
+      // Redirect to another webpage
+      window.location.href = "https://example.com/another-page";
+    } else {
+      // User is not logged in
+      // Perform any other desired actions
+      console.log("User is not logged in");
+    }
+  });
+
+  netlifyIdentity.init();
+});
 
   </script>
   <div style="display: flex; justify-content: center;" data-netlify-identity-menu></div>
