check for login 4

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
   </style>
 </head>
 <body>
-  <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js">
+  <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <script type="text/javascript">
   document.addEventListener("DOMContentLoaded", function() {
   netlifyIdentity.on("init", function(user) {
     if (user) {
