check for login 5

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     if (user) {
       // User is logged in
       // Redirect to another webpage
-      window.location.href = "https://example.com/another-page";
+      window.location.href = "khetguru.netlify.app/test.html";
     } else {
       // User is not logged in
       // Perform any other desired actions
