Check for logout 3

--- a/test.html
+++ b/test.html
@@ -152,7 +152,7 @@ input[type="submit"] {
 
 
     </style>
-    <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <!--<script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>-->
     </head>
     <body>
     <script>
@@ -231,7 +231,7 @@ input[type="submit"] {
             document.getElementById("resultsContainer").style.display = "block";
         }
     </script>
-  <div style="display: flex; justify-content: center;" data-netlify-identity-menu></div>
+    <div style="display: flex; justify-content: center;" data-netlify-identity-menu></div>
     <h1>Soil Nutrient Calculator</h1>
     <!--<form action="submit.php" method="post">-->
         <form name="npkValue" netlify>
