check for logout 5

--- a/test.html
+++ b/test.html
@@ -152,7 +152,7 @@ input[type="submit"] {
 
 
     </style>
-    <!--<script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>-->
+    <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     </head>
     <body>
     <script>
