widget double generate fix

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
 <body>
   <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   <script type="text/javascript">
+      // Check if Netlify Identity Widget script is already present
+  if (!window.netlifyIdentity) {
+    // Add Netlify Identity Widget script dynamically
+    var script = document.createElement("script");
+    script.src = "https://identity.netlify.com/v1/netlify-identity-widget.js";
+    document.head.appendChild(script);
+  }
+
   document.addEventListener("DOMContentLoaded", function() {
   netlifyIdentity.on("init", function(user) {
     if (user) {
