--- a/test.html
+++ b/test.html
@@ -152,17 +152,15 @@ input[type="submit"] {
 
 
     </style>
-    <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     </head>
     <body>
     <script>
-            // Check if Netlify Identity Widget script is already present
-  if (window.netlifyIdentity) {
-    // Add Netlify Identity Widget script dynamically
-    var script = document.removeChild("script");
-    script.src = "https://identity.netlify.com/v1/netlify-identity-widget.js";
-    document.head.appendChild(script);
-  }
+    if (typeof window.netlifyIdentity === 'undefined') {
+      // Add Netlify Identity Widget script dynamically
+      var script = document.createElement("script");
+      script.src = "https://identity.netlify.com/v1/netlify-identity-widget.js";
+      document.head.appendChild(script);
+    }
       document.addEventListener("DOMContentLoaded", function() {
       netlifyIdentity.on("logout", function() {
         // User is logged out
