--- a/test/index.html
+++ b/test/index.html
@@ -158,7 +158,7 @@ input[type="submit"] {
       netlifyIdentity.on("logout", function() {
         // User is logged out
         // Redirect to another webpage
-        window.location.href = "khetguru.netlify.app";
+        window.location.href = "";
       });
 
       netlifyIdentity.on("init", function(user) {
