--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	  if (user) {
 		// User is logged in
 		// Redirect to another webpage
-		window.location.href = "/test";
+		window.location.href = "npk.html";
 		window.location.href = "test.html";
 	  } else {
 		// User is not logged in
