--- a/npk.html
+++ b/npk.html
@@ -158,7 +158,7 @@ input[type="submit"] {
       netlifyIdentity.on("logout", function() {
         // User is logged out
         // Redirect to another webpage
-        window.location.href = "";
+        window.location.href = "index.html";
       });
 
       netlifyIdentity.on("init", function(user) {
