--- a/npk.html
+++ b/npk.html
@@ -155,17 +155,13 @@ input[type="submit"] {
     <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function() {
-      netlifyIdentity.on("logout", function() {
-        // User is logged out
-        // Redirect to another webpage
-        window.location.href = "index.html";
-      });
 
       netlifyIdentity.on("init", function(user) {
         if (!user) {
           // User is not logged in
           // Perform any other desired actions
           console.log("User is not logged in");
+          window.location.href = "index.html"
         }
       });
 
