--- a/npk.html
+++ b/npk.html
@@ -161,7 +161,8 @@ input[type="submit"] {
           // User is not logged in
           // Perform any other desired actions
           console.log("User is not logged in");
-          window.location.href = "index.html"
+          window.location.href = "index.html";
+          location.reload();
         }
       });
 
