--- a/npk.html
+++ b/npk.html
@@ -186,8 +186,8 @@ input[type="submit"] {
 
             // Calculate total nutrients in land
             var totalNitrogen = nitrogen * landArea;
-            var totalPhosphorousCost= phosphorous * landArea; 
-            var totalPotassiumCost = potassium * landArea; 
+            var totalPhosphorous= phosphorous * landArea; 
+            var totalPotassium = potassium * landArea; 
 
             // Calculate nutrient differences
             var nitrogenDifference = idealNitrogenForLand - totalNitrogen;
