--- a/npk.html
+++ b/npk.html
@@ -206,8 +206,8 @@ input[type="submit"] {
 
             //Calculate total cost for land
             var totalNitrogenCost = nitrogenFertilizer * fertilizerCostNitrogen;
-            var totalPhosphorousCost = nitrogenFertilizer * fertilizerCostNitrogen;
-            var totalPotassiumCost = nitrogenFertilizer * fertilizerCostNitrogen;
+            var totalPhosphorousCost = phosphorousFertilizer * fertilizerCostNitrogen;
+            var totalPotassiumCost = potassiumFertilizer * fertilizerCostNitrogen;
             var totalCost = totalNitrogenCost + totalPhosphorousCost + totalPotassiumCost
 
 
