--- a/npk.html
+++ b/npk.html
@@ -246,7 +246,7 @@ input[type="submit"] {
             document.getElementById("displayTotalPhosphorousCost").textContent = Math.round(totalPhosphorousCost);
             document.getElementById("displayTotalPotassiumCost").textContent = Math.round(totalPotassiumCost);
 
-            document.getElementById("displayTotalCost").textContent = totalCost;
+            document.getElementById("displayTotalCost").textContent = Math.round(totalCost);
 
             // Show the results container div
             document.getElementById("resultsContainer").style.display = "block";
